...
    <!--            android:gravity="center"-->
    <!--            android:text="章節"/>-->

    <!--    </LinearLayout>-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_exam"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:text="開始作答"
...
