...
            android:id="@+id/scrollQuestion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="vertical">
            <TextView
                android:id="@+id/tvQuestionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="24dp"
                android:text="等待發題中..."
                android:textColor="#212121"
...
